Added ability for user to set the 'current user mention' background color for Vivaldi Panel for Confluence Tasks

--- a/Atlassian/Confluence/Vivaldi Panel for Tasks/vivaldi-panel-tasks.css
+++ b/Atlassian/Confluence/Vivaldi Panel for Tasks/vivaldi-panel-tasks.css
@@ -24,4 +24,8 @@
     #mytask-controls {
        margin-bottom: 0px !important;                                
     }
+
+    .wiki-content a.user-mention.current-user-mention {
+       background-color: /*[[currentUserMention]]*/ !important;
+    }
 }
